<resources>
    <string name="app_name">DesafioSantander</string>
    <string name="cell_url">https://floating-mountain-50292.herokuapp.com/</string>
    <string name="txt_enviar">Enviar</string>
    <string name="btn_investimento">Investimento</string>
    <string name="btn_contato">Contato</string>
    <string name="snack_sem_conexao">Nenhuma rede disponível.\nVerificar conexão.</string>
    <string name="label_obrigado">Obrigado!</string>
    <string name="label_msg_enviada">Mensagem enviada\ncom sucesso :)</string>
    <string name="label_nova_mensagem">Enviar nova mensagem</string>
    <string name="title_toolbar">Contato</string>
    <string name="valor_de_risco">Valor de risco</string>
    <string name="label_info_fundo">Fundo</string>
    <string name="label_info_cdi">CDI</string>
    <string name="more_info_month">No mês</string>
    <string name="more_info_year">No ano</string>
    <string name="more_info_twelve_month">12 meses</string>
    <string name="btn_investir">Investir</string>
    <string name="data_info_baixar">Baixar</string>
    <string name="holder_baixar_data">Baixar</string>
    <string name="sanck_sem_evento_btn">Nenhum evento programado.</string>
</resources>
