<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/fund_view">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_invest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:text="Fundos de Investimento" />

        <TextView
            android:id="@+id/fund_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="Vinci Valorem FI\n Multimercado" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fund_name" />

        <TextView
            android:id="@+id/whats_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:text="O que é?" />

        <TextView
            android:id="@+id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whats_is"
            tools:text="O Fundo tem por objetivo proporcionar aos seus cotistas rentabilidade no longo prazo através de investimentos." />

        <TextView
            android:id="@+id/risk_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definition"
            tools:text="Grau de risco do investimento" />

        <LinearLayout
            android:id="@+id/layout_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/risk_title">

            <ImageView
                android:id="@+id/risk_one"
                style="@style/CustomViewRisk"
                android:layout_height="8dp"
                android:contentDescription="@string/valor_de_risco"
                android:src="@drawable/risco_um" />

            <ImageView
                android:id="@+id/risk_two"
                style="@style/CustomViewRisk"
                android:layout_height="8dp"
                android:layout_marginStart="1dp"
                android:contentDescription="@string/valor_de_risco"
                android:src="@drawable/risco_dois" />

            <ImageView
                android:id="@+id/risk_three"
                style="@style/CustomViewRisk"
                android:layout_height="8dp"
                android:layout_marginStart="1dp"
                android:contentDescription="@string/valor_de_risco"
                android:src="@drawable/risco_tres" />

            <ImageView
                android:id="@+id/risk_four"
                style="@style/CustomViewRisk"
                android:layout_height="8dp"
                android:layout_marginStart="1dp"
                android:contentDescription="@string/valor_de_risco"
                android:src="@drawable/risco_quatro" />

            <ImageView
                android:id="@+id/risk_five"
                style="@style/CustomViewRisk"
                android:layout_height="8dp"
                android:layout_marginStart="1dp"
                android:contentDescription="@string/valor_de_risco"
                android:src="@drawable/risco_cinco" />
        </LinearLayout>

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_risk"
            tools:text="Mais informações sobre o investimento" />

        <LinearLayout
            android:id="@+id/layout_title_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/info_title">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/label_info_fundo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/label_info_cdi" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_more_info_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_title_info">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/more_info_month" />

            <TextView
                android:id="@+id/month_fund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="0,3.%" />

            <TextView
                android:id="@+id/month_cdi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="0,3%" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_more_info_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_more_info_month">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/more_info_year" />

            <TextView
                android:id="@+id/year_fund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="13,01%" />

            <TextView
                android:id="@+id/year_cdi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="12,08%" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_more_info_twelve_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_more_info_year">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/more_info_twelve_month" />

            <TextView
                android:id="@+id/twelve_fund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="17.9%" />

            <TextView
                android:id="@+id/twelve_cdi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="17,6%" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_more_info_twelve_month" />

        <LinearLayout
            android:id="@+id/layout_list_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/view2">

            <TextView
                android:id="@+id/text_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                tools:text="17.9%" />

            <TextView
                android:id="@+id/text_info_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="17,6%" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_list_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_list_info">

            <TextView
                android:id="@+id/text_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                tools:text="17.9%" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_img_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_investir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_btn"
            android:padding="18dp"
            android:text="@string/btn_investir"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:onClick="startInvest"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_list_down" />

        <include layout="@layout/menu_bottom_view" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>